--- a/index.html
+++ b/index.html
@@ -2,163 +2,332 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy" rel="stylesheet">
-
-    <title>CV NUMÉRIQUE</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy"
+    rel="stylesheet">
+  <link rel="stylesheet" href="assets/bootstrap-5.0.1-dist/css/bootstrap.min.css">
+  <!-- css -->
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Site cv de Mr Cédric Gallet</title>
 </head>
 
 <body>
+  <!-- ===========================================ACCUEIL=========================================================== -->
 
-    <header>
-        <h1>CV de Cédric Gallet</h1>
-    </header>
-
-
-    <section>
-        <div class="presentation">
-            <h2>Qui suis-je ?</h2>
-            <p>Passionné,Curieux</p>
-            <a href="#" download>Télécharger mon CV</a>
-        </div>
-    </section>
-
-
-    <section>
-        <h2>Expériences professionnelles</h2>
-
-        <div class="exp">
-           <div class="exp-info">
-                <h4>SIMRA SERVICES</h4>
-                <h4>Avril 2007 -Mars 2021</h4>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <!-- ======================================== NAVBAR ================================ -->
+          <nav class="navBarColor navbar navbar-expand-lg navbar-dark">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#acceuil">Accueil</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#parcours">Mon Parcours</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#portfolio">Mon portfolio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#contact">Me contacter</a>
+                </li>
+              </ul>
             </div>
-            <div class="exp-desc">
-                <p>Ajusteur-Monteur</p>
+          </nav>
+
+          <hr class="text-info">
+
+          <div id="accueil">
+            <div class="d-flex flex-column justify-content-center align-items-center h-100">
+              <h1>Cédric Gallet</h1>
+
+              <hr class="text-info">
+              <h2 class="dev text-center">Je suis développeur Web et Web mobile</h2>
+
+              <div class="title text-center">
+
+                <hr class="text-info">
+
+                <a class="cv nav-link text-white" href="cv-papier-gallet-cedric.pdf" title="Télécharger cv format PDF"
+                  download>Télécharger mon CV</a>
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- ================================================PARCOURS=============================================== -->
+
+  <main>
+    <div class="container" id="parcours">
+
+      <div>
+        <h2 class="text-white">MON PARCOURS</h2>
+      </div>
+
+      <div class="title text-center">
+        <span>
+          <h3>Expériences professionnelles</h3>
+        </span>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12">
+
+          <div class="card shadow">
+            <div class="card-body shadow">
+              <h4 class="card-title">SIMRA SERVICES</h4>
+              <p class="card-text text-center">Avril 2007 - Mars 2021</p>
+            </div>
+            <div class="card-footer text-end">
+              Ajusteur-Monteur
+            </div>
+
+            <!-- =========================ESPACE========================== -->
+
+            <div id="space" class="rounded-3">
+            </div>
+
+            <!-- ============================================================ -->
+
+            <div class="card-body shadow">
+              <h4 class="card-title">GOOD YEAR</h4>
+              <p class="card-text text-center">2005-2006</p>
+            </div>
+            <div class="card-footer text-end">
+              Opérateur Machines
+            </div>
+
+            <!-- =========================ESPACE========================== -->
+
+            <div id="space" class="rounded-3">
+            </div>
+
+            <!-- ============================================================ -->
+
+            <div class="card-body shadow">
+              <h4 class="card-title">ROQUETTE FRERES</h4>
+              <p class="card-text text-center">2004-2005</p>
+            </div>
+            <div class="card-footer text-end">
+              Responsable Protéines
+            </div>
+
+            <!-- =========================ESPACE========================== -->
+
+            <div id="space" class="rounded-3">
+            </div>
+
+            <!-- ============================================================ -->
+
+            <div class="card-body shadow">
+              <h4 class="card-title">TISSAGE DE PICARDIE</h4>
+              <p class="card-text text-center">1999-2004</p>
+            </div>
+            <div class="card-footer text-end">
+              Responsable Monteur
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- ========================================FORMATIONS========================================== -->
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 mt-2">
+
+          <div class="title text-center">
+            <span>
+              <h3>Formations Et diplômes</h3>
+            </span>
+          </div>
+
+          <div class="card shadow">
+            <div class="card-body shadow">
+              <h4 class="card-title">LA MANU</h4>
+              <p class="card-text text-center">Avril 2021-Septembre 2021</p>
+            </div>
+            <div class="card-footer text-end">
+              Développeur Web et Web mobile
+            </div>
+          </div>
+
+          <!-- =========================ESPACE========================== -->
+
+          <div id="space" class="rounded-3">
+          </div>
+
+          <!-- ============================================================ -->
+
+          <div class="card shadow">
+            <div class="card-body shadow">
+              <h4 class="card-title">ROQUETTE FRERES</h4>
+              <p class="card-text text-center">2005-Mars 2006</p>
+            </div>
+            <div class="card-footer text-end">
+              Opérateur Numérique
+            </div>
+          </div>
+
+          <!-- =========================ESPACE========================== -->
+
+          <div id="space" class="rounded-3">
+          </div>
+
+          <!-- ============================================================ -->
+
+          <div class="card shadow">
+            <div class="card-body shadow">
+              <h4>TISSAGE DE PICARDIE</h4>
+              <p class="card-text text-center">2004</p>
+            </div>
+            <div class="card-footer text-end">
+              CAP Exploitations d'installations industrielle
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ==========================COMPÉTENCES INFORMATIQUES=================================== -->
+
+    <div class="container">
+      <div class="row">
+
+        <div class="col-12 col-lg-6 mt-2">
+
+          <div class="title text-center">
+            <span>
+              <h3>Compétences Informatiques</h3>
+            </span>
+          </div>
+
+          <div class="card text-center">
+            <div class="card-text shadow">
+              <div class="card-title pt-2">HTML / CSS</div>
+            </div>
+
+            <div class="card-text shadow">
+              <div class="card-title pt-2">PHP / MySQL</div>
+            </div>
+
+            <div class="card-text shadow">
+              <div class="card-title pt-2">JavaScript</div>
+            </div>
+          </div>
         </div>
 
-        <div class="exp">
-            <div class="exp-info">
-                <h4>BERTRANCOURT</h4>
-                <h4>2006</h4>
+        <!-- ==========================COMPÉTENCES PERSONNELLES=================================== -->
+
+        <div class="col-12 col-lg-6 mb-2 mt-2">
+
+          <div class="text-center">
+            <span>
+              <h3>Compétences Personnelles</h3>
+            </span>
+          </div>
+
+          <div class="card text-center">
+
+            <div class="d-flex justify-content-between align-items-center card-text shadow">
+              <div class="card-title ms-2 pt-2">Créativité</div>
+              <div class="card-title me-2 pt-2">50%</div>
             </div>
-            <div class="exp-desc">
-                <p>Opérateur Machines</p>
+
+            <div class="d-flex justify-content-between align-items-center card-text shadow">
+              <div class="card-title ms-2 pt-2">Adaptation</div>
+              <div class="card-title me-2 pt-2">60%</div>
             </div>
-        </div>
 
-        <div class="exp">
-            <div class="exp-info">
-                <h4>GOOD YEAR</h4>
-                <h4>2005</h4>
+            <div class="d-flex justify-content-between card-text shadow">
+              <div class="card-title ms-2 pt-2">Sérieux</div>
+              <div class="card-title me-2 pt-2">90%</div>
             </div>
-            <div class="exp-desc">
-                <p>Opérateur Machines</p>
-            </div>
+          </div>
         </div>
+      </div>
+    </div>
 
-        <div class="exp">
-            <div class="exp-info">
-                <h4>ROQUETTE FRERES</h4>
-                <h4>2004-2005</h4>
-            </div>
-            <div class="exp-desc">
-                <p>Responsable Protéines</p>
-            </div>
+
+    <!-- ====================================================PORTFOLIO============================================================ -->
+
+    <div class="container" id="portfolio">
+
+      <div>
+        <h2 class="text-end text-white mt-3 mb-3">PORTFOLIO</h2>
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+          <a href="http://saveurantan.manusien-ecolelamanu.fr/"><img src="assets/img/portfolio/saveurDantan.png"
+              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a>
+
+          <a href="http://maconnerieocordo.localhost/"><img src="assets/img/portfolio/maconnerieOcordo.png"
+              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
+
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <a href="https://cedricgallet.github.io/Vitrine_Quattro_Stagioni/"><img src="assets/img/portfolio/Vitrine_Quattro_Stagioni.png"
+              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a>
+
+          <a href="http://hanoi.localhost/"><img src="assets/img/portfolio/restauranHanoi.png"
+              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
+
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <a href="http://e-chair.localhost/"><img src="assets/img/portfolio/restaurantEchair.png"
+              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a>
+
+          <a href="http://lookthis.localhost/"><img src="assets/img/portfolio/siteLookThis.png"
+              class="img w-100 shadow-1-strong rounded mb-4" alt=""></a> </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- =================================================== FOOTER ========================================== -->
+  <footer id="footer">
+
+    <hr class="text-info">
+
+    <div class="container" id="contact">
+      <div class="col-lg-12">
+        <div class="d-flex justify-content-center align-items-center flex-column text-white">
+
+          <div class="contact mb-4">Me Contacter</div>
+          <div class="social-links">
+            <a href="https://www.linkedin.com/in/cedric-gallet"><img src="assets/img/linkedin.webp" alt="Logo Linkedin"
+                height="36" width="36" ;>
+          </div>
+          <div class="social-link mb-3"><a class="text-decoration-none text-white"
+              href="mailto:galletcedric@protonmail.com">galletcedric@protonmail.com</a></div>
+          <div class="copyright">&copy; <strong><span>Copyright Tous droits réservés.</span></strong></div>
         </div>
+      </div>
+    </div>
+  </footer>
 
-        <div class="exp">
-            <div class="exp-info">
-                <h4>TISSAGE DE PICARDIE RINET</h4>
-                <h4>1999-2004</h4>
-            </div>
-            <div class="exp-desc">
-                <p>Responsable Monteur</p>
-            </div>
-        </div>
-        
-    </section>
+  <!-- JS Bootstrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+  </script>
 
-
-    <section>
-        <h2>Formation et Diplômes</h2>
-
-        <div class="exp">
-            <div class="exp-info">
-                <h4>Avril 2021-Septembre 2021</h4>
-            </div>
-            <div class="exp-desc">
-                <p>Développeur Web et Web mobile</p>
-            </div>
-        </div>
-
-        <div class="exp">
-            <div class="exp-info">
-                <h4>Décembre 2005-Mars 2006</h4>
-            </div>
-            <div class="exp-desc">
-                <p>Opérateur Numérique</p>
-            </div>
-        </div>
-
-        <div class="exp">
-            <div class="exp-info">
-                <h4>2004</h4>
-            </div>
-            <div class="exp-desc">
-                <p> CAP Exploitations d'installations industrielles</p>
-            </div>
-        </div>
-    </section>
-
-
-    <section>
-        <h2>Compétences Informatiques</h2>
-
-        <div class="comp">
-            <p>HTML / CSS</p>
-            <div class="conteneur-barre"><span class="barre c100"></span></div>
-        </div>
-        <div class="comp">
-            <p>PHP / MySQL</p>
-            <div class="conteneur-barre"><span class="barre c95"></span></div>
-        </div>
-
-        <div class="comp">
-            <p>JavaScript</p>
-            <div class="conteneur-barre"><span class="barre c90"></span></div>
-        </div>
-
-        <h2>Personnelles</h2>
-
-        <div class="comp2">
-            <p>Créativité</p>
-            <p>40%</p>
-            <div class="conteneur-barre2"><span class="barre c85"></span></div>
-        </div>
-
-        <div class="comp2">
-            <p>Adaptation</p>
-            <p>60%</p>
-            <div class="conteneur-barre2"><span class="barre c80"></span></div>
-        </div>
-        <div class="comp2">
-            <p>Sérieux</p>
-            <p>90%</p>
-            <div class="conteneur-barre2"><span class="barre c75"></span></div>
-        </div>
-    </section>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-
-    <footer>
-        <div class="social">
-            <a href="https://www.linkedin.com/in/cedric-gallet"><img src="assets/img/lk.png" alt="Logo Lk"></a>
-        </div>
-    </footer>
 </body>
 
 </html>
